# RepoDocumentale

./: .gitignore  NoTIP.lnk  README.md  aboutus.html  do  flake.nix  gulpfile.js  index.html  package-lock.json  package.json  technical_speech.md
.devcontainer/: devcontainer.json
.github/workflows/: README.md  deploy.yml  gulpase-report.yml  gulpease-report.yml  pr-check-n-build.yml  pr-merge-ready.yml  stability-index.yml
.hunspell/: ignore  ignore.yaml
.schemas/: meta.schema.json  test.schema.yaml
docs/00-templates/: base_configs.typ  base_document.typ  base_slides.typ  base_verbale.typ
docs/esempio_ddb/: esempio_ddb.typ
notipdo/: do.py  pyproject.toml  requirements.txt
notipdo/commands/: build.py  check.py  data.py  defaults.py  format.py  generate.py  metrics.py  watch.py
notipdo/lib/: builder.py  configs.py  docs_checker.py  docs_factory.py  formatter.py  git_scanner.py  gulpease.py  local_scanner.py  model.py  pr_checker.py  requirements_data.py  site_generator.py  stability.py
old-scripts/: build_docs.py  docs_lib.py  generate_site.py  validate_pr_changes.py
scripts/: do.py  docs_lib.py  generate_site.py  pyproject.toml  requirements.txt  validate_pr_changes.py
scripts/commands/: build.py  check.py  defaults.py  generate.py  watch.py
scripts/lib/: builder.py  checker.py  configs.py  docs_factory.py  git_comparer.py  git_scanner.py  local_scanner.py  model.py  scanner.py  site_generator.py
site/: aboutus.html  group.template.html  index.template.html  template_document.html
site/style/: about.css  style.css  (+1 more)
style/: navbar.css  style.css
(+1026 files in other folders)
